unpackaged/main/default/objects/Pago__c/Pago__c.object-meta.xml
<CustomObject>
    <label>Pago</label>
    <nameField>
        <displayFormat>4-{0000000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>