unpackaged/main/default/objects/Pago__c/fields/Cancelaci_n__c.field-meta.xml
<CustomField>
    <fullName>Cancelaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelación</label>
    <referenceTo>CPPT_Cancelacion__c</referenceTo>
    <relationshipLabel>Pagos</relationshipLabel>
    <relationshipName>Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>