unpackaged/main/default/objects/Pago__c/fields/Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Comercial__c</fullName>
    <label>Cobranza Comercial</label>
    <referenceTo>Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Pagos</relationshipLabel>
    <relationshipName>Pagos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>