unpackaged/main/default/objects/Pago__c/fields/Fecha_Recibo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recibo__c</fullName>
    <label>Fecha Recibo</label>
    <type>Date</type>
</CustomField>