unpackaged/main/default/objects/Pago__c/fields/IdInterface__c.field-meta.xml
<CustomField>
    <fullName>IdInterface__c</fullName>
    <label>IdInterface</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>