unpackaged/main/default/objects/Pago__c/fields/IdMoneda__c.field-meta.xml
<CustomField>
    <fullName>IdMoneda__c</fullName>
    <label>IdMoneda</label>
    <length>10</length>
    <type>Text</type>
</CustomField>