unpackaged/main/default/objects/Pago__c/fields/IdProcesoAr__c.field-meta.xml
<CustomField>
    <fullName>IdProcesoAr__c</fullName>
    <label>IdProcesoAr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>