unpackaged/main/default/objects/Pago__c/fields/IdReciboAr__c.field-meta.xml
<CustomField>
    <fullName>IdReciboAr__c</fullName>
    <label>IdReciboAr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>