unpackaged/main/default/objects/Pago__c/fields/IdReciboCrm__c.field-meta.xml
<CustomField>
    <fullName>IdReciboCrm__c</fullName>
    <label>IdReciboCrm</label>
    <length>30</length>
    <type>Text</type>
</CustomField>