unpackaged/main/default/objects/Pago__c/fields/IdSector__c.field-meta.xml
<CustomField>
    <fullName>IdSector__c</fullName>
    <label>IdSector</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>