unpackaged/main/default/objects/Pago__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Importe</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>