unpackaged/main/default/objects/Pago__c/fields/Importe_Aplicado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Aplicado__c</fullName>
    <label>Importe Aplicado</label>
    <summarizedField>Pago_Aplicado__c.Importe_Aplicado__c</summarizedField>
    <summaryForeignKey>Pago_Aplicado__c.Pago__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>