unpackaged/main/default/objects/Pago__c/fields/Ind_Anticipo__c.field-meta.xml
<CustomField>
    <fullName>Ind_Anticipo__c</fullName>
    <label>Ind Anticipo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>