unpackaged/main/default/objects/Pago__c/fields/Ind_Reversa__c.field-meta.xml
<CustomField>
    <fullName>Ind_Reversa__c</fullName>
    <label>Ind Reversa</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>