unpackaged/main/default/objects/Pago__c/fields/Integracion_EBS_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Integracion_EBS_Pagos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integracion EBS Pagos</label>
    <referenceTo>Integracion_EBS_Pagos__c</referenceTo>
    <relationshipLabel>Pagos</relationshipLabel>
    <relationshipName>Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>