unpackaged/main/default/objects/Pago__c/fields/Metodo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_de_Pago__c</fullName>
    <label>Método de Pago (fld dep)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Pago__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANCOS BANORTE - CASH</fullName>
            </value>
            <value>
                <fullName>BANCOS BANORTE - MC-BNT-MXN-550</fullName>
            </value>
            <value>
                <fullName>BANCOS BANORTE - MC-BNT-MXN-799</fullName>
            </value>
            <value>
                <fullName>BANCOS FAMSA - CASH</fullName>
            </value>
            <value>
                <fullName>BANCOS FAMSA - MC-FAM-MXN-156</fullName>
            </value>
            <value>
                <fullName>BANCOS FAMSA - MC-FAM-MXN-674</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - CASH</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - MC-SAN-MXN-297</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - MC-SAN-MXN-359</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - MC-SAN-MXN-457</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - MC-SAN-MXN-535</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - MC-SAN-MXN-657</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - MC-SAN-MXN-659</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER - MC-SAN-MXN-753</fullName>
            </value>
            <value>
                <fullName>BANCOS VIRTUAL - CASH</fullName>
            </value>
            <value>
                <fullName>BANCOS VIRTUAL - MC-VIRT-EFVO-CJ</fullName>
            </value>
            <value>
                <fullName>BANCOS VIRTUAL - MC-VIRT-EFVO-CMEX</fullName>
            </value>
            <value>
                <fullName>BANCOS VIRTUAL - MC-VIRT-OXXO-CJ</fullName>
            </value>
            <value>
                <fullName>BANCOS VIRTUAL - MC-VIRT-OXXO-HJ</fullName>
            </value>
            <value>
                <fullName>BANCOS VIRTUAL - MC-VIRT-PAG-FID-VSE</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-BNT-MXN-550</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-FAM-MXN-674</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-HSBC-MXN-381</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-HSBC-MXN-445</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-HSBC-MXN-579</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-HSBC-MXN-744</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-HSBC-MXN-793</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-SAN-MXN-140</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-SAN-MXN-297</fullName>
            </value>
            <value>
                <fullName>Cheque - MC-SAN-MXN-359</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>