unpackaged/main/default/objects/Pago__c/fields/Metodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Pago__c</fullName>
    <label>Método de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APLICACION CARTERA PV CJ</fullName>
            </value>
            <value>
                <fullName>APLICACION CARTERA PV CJM</fullName>
            </value>
            <value>
                <fullName>APLICACION CARTERA PV CJQ</fullName>
            </value>
            <value>
                <fullName>APLICACION CARTERA PV IPT</fullName>
            </value>
            <value>
                <fullName>APLICACION CARTERA PV SCJ</fullName>
            </value>
            <value>
                <fullName>CAJA</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>CB-FAM-MXN-674</fullName>
            </value>
            <value>
                <fullName>CB-SAN-DLL-998</fullName>
            </value>
            <value>
                <fullName>CB-SAN-MXN-657</fullName>
            </value>
            <value>
                <fullName>CREDITO</fullName>
            </value>
            <value>
                <fullName>DEBITO</fullName>
            </value>
            <value>
                <fullName>ELEC-VIRT-EFVO-CJ</fullName>
            </value>
            <value>
                <fullName>ELEC-VIRT EFVO-QRO</fullName>
            </value>
            <value>
                <fullName>ELEC-VIRT-TB-CJ</fullName>
            </value>
            <value>
                <fullName>MANUAL-BMX-MXN-729</fullName>
            </value>
            <value>
                <fullName>MANUAL-BNT-MXN-550</fullName>
            </value>
            <value>
                <fullName>MANUAL-BNT-MXN-904</fullName>
            </value>
            <value>
                <fullName>MANUAL-CIB-MXN-704</fullName>
            </value>
            <value>
                <fullName>MANUAL-HSBC-MXN-744</fullName>
            </value>
            <value>
                <fullName>MANUAL-SAN-MXN-535</fullName>
            </value>
            <value>
                <fullName>MANUAL-SAN-MXN-657</fullName>
            </value>
            <value>
                <fullName>MC-BNT-MXN-2317</fullName>
            </value>
            <value>
                <fullName>MC-BNT-MXN-317A</fullName>
            </value>
            <value>
                <fullName>MC-BNT-MXN-550</fullName>
            </value>
            <value>
                <fullName>MC-BNT-MXN-799</fullName>
            </value>
            <value>
                <fullName>MC-BNT-MXN-904</fullName>
            </value>
            <value>
                <fullName>MC-CI-ANTI-CJ</fullName>
            </value>
            <value>
                <fullName>MC-CI-ANTI-CM</fullName>
            </value>
            <value>
                <fullName>MC-CI-ANTI-CQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>