unpackaged/main/default/objects/Pago__c/fields/No_Integracion_AR__c.field-meta.xml
<CustomField>
    <fullName>No_Integracion_AR__c</fullName>
    <label>No. Integración AR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>