unpackaged/main/default/objects/Pago__c/fields/No_Pago_AR__c.field-meta.xml
<CustomField>
    <fullName>No_Pago_AR__c</fullName>
    <externalId>true</externalId>
    <label>No. Pago AR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>