unpackaged/main/default/objects/Pago__c/fields/Nombre_del_Pago__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Pago__c</fullName>
    <label>Nombre del Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recibo</fullName>
            </value>
            <value>
                <fullName>Nota de Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>