unpackaged/main/default/objects/Pago__c/fields/Numero_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Pago__c</fullName>
    <displayFormat>Pago-{000000}</displayFormat>
    <label>Número de Pago</label>
    <type>AutoNumber</type>
</CustomField>