unpackaged/main/default/objects/Pago__c/fields/Pago_Asociado_a_Corte_de_Caja__c.field-meta.xml
<CustomField>
    <fullName>Pago_Asociado_a_Corte_de_Caja__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago Asociado a Corte de Caja?</label>
    <type>Checkbox</type>
</CustomField>