unpackaged/main/default/objects/Pago__c/fields/Pago_Realiado_en_Caja__c.field-meta.xml
<CustomField>
    <fullName>Pago_Realiado_en_Caja__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago Realiado en Caja?</label>
    <type>Checkbox</type>
</CustomField>