unpackaged/main/default/objects/Pago__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Saldo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>