unpackaged/main/default/objects/Pago__c/fields/Tipo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pago__c</fullName>
    <label>Tipo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANCOS BANORTE</fullName>
            </value>
            <value>
                <fullName>BANCOS FAMSA</fullName>
            </value>
            <value>
                <fullName>BANCOS SANTANDER</fullName>
            </value>
            <value>
                <fullName>BANCOS VIRTUAL</fullName>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
            </value>
            <value>
                <fullName>CHEQUE SBC</fullName>
            </value>
            <value>
                <fullName>EFECTIVO</fullName>
            </value>
            <value>
                <fullName>NOTA CREDITO</fullName>
            </value>
            <value>
                <fullName>NOVACION</fullName>
            </value>
            <value>
                <fullName>PAGO CON TARJETA</fullName>
            </value>
            <value>
                <fullName>PAYMENT</fullName>
            </value>
            <value>
                <fullName>TARJETA</fullName>
            </value>
            <value>
                <fullName>TRANSFERENCIA</fullName>
            </value>
            <value>
                <fullName>VIRTUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>