unpackaged/main/default/objects/Pago__c/fields/Tipo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pago__c</fullName>
    <label>Tipo Pago</label>
    <length>30</length>
    <type>Text</type>
</CustomField>