unpackaged/main/default/objects/Pago__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Cobranza_Comercial__c</columns>
    <columns>Estatus_del_Pago__c</columns>
    <columns>Fecha_de_Pago__c</columns>
    <columns>Importe__c</columns>
    <columns>Importe_Aplicado__c</columns>
    <columns>Numero_de_Pago__c</columns>
    <columns>Saldo__c</columns>
    <columns>Tipo_de_Pago__c</columns>
    <columns>Pago_Asociado_a_Corte_de_Caja__c</columns>
    <columns>Pago_Realiado_en_Caja__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>